tests/NormalTests/paczka1/fuzzy1/90702499.err
Error in line 1: QK8vlMWLT S68 61,1
Error in line 15: 6IujW S961 38,3
Error in line 11: 4B39nxCp5SI A803 73,0
Error in line 17: A519 A519 58,7
Error in line 18: 6IujW A519 20,3
Error in line 27: F6q A803 96,24
Error in line 28: ?4B39nx{p5SI
Error in line 30: F6q A803 95,0
Error in line 33: F6q A519 86,0
Error in line 23: 6IujW A803 22,5
